@@ -142,8 +142,8 @@ MESSAGE("PACK_SOURCE_FILE_NAME=${PACK_SOURCE_FILE_NAME}")
 PACK_RPM(PRJ_SRPM_FILE_NAME "${RPM_BUILD_SPECS}/ibus-chewing.spec.in" "${PACK_SOURCE_FILE_NAME}")
 MESSAGE("PRJ_SRPM_FILE_NAME=${PRJ_SRPM_FILE_NAME}")
 
-INCLUDE(UseKojiFedora)
-USE_KOJI_FEDORA("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}")
+INCLUDE(UseFedpkg)
+USE_FEDPKG("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}")
 
 ADD_DEPENDENCIES(pack_src pot_file)
 
