@@ -20,17 +20,25 @@ IF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
     INCLUDE(ManageVariable)
 
     MACRO(LOAD_RELEASE_FILE releaseFile)
-	SETTING_FILE_GET_ATTRIBUTE(PRJ_VER "PRJ_VER" "${releaseFile}")
-	SETTING_FILE_GET_ATTRIBUTE(CHANGE_SUMMARY "SUMMARY" "${releaseFile}")
+	#	SETTING_FILE_GET_ATTRIBUTE(PRJ_VER "PRJ_VER" "${releaseFile}")
+	#SETTING_FILE_GET_ATTRIBUTE(CHANGE_SUMMARY "SUMMARY" "${releaseFile}")
+	#SETTING_FILE_GET_ATTRIBUTE(UPDATE_TYPE "UPDATE_TYPE" "${releaseFile}")
+	#SETTING_FILE_GET_ATTRIBUTE(REDHAT_BUGZILLA "UPDATE_TYPE" "${releaseFile}")
 	COMMAND_OUTPUT_TO_VARIABLE(_grep_line grep -F "[Changes]" -n -m 1 ${releaseFile})
 	#MESSAGE("_grep_line=|${_grep_line}|")
 	IF("${_grep_line}" STREQUAL "")
 	    MESSAGE(FATAL_ERROR "${releaseFile} does not have a [Changes] tag!")
 	ENDIF("${_grep_line}" STREQUAL "")
 	STRING(REGEX REPLACE ":.*" "" _line_num "${_grep_line}")
+	MATH(EXPR _setting_line_num ${_line_num}-1)
+	COMMAND_OUTPUT_TO_VARIABLE(_releaseFile_head head -n ${_setting_line_num} ${releaseFile})
+	FILE(WRITE "${releaseFile}_NO_PACK" "${_releaseFile_head}")
+	SETTING_FILE_GET_ALL_ATTRIBUTES("${releaseFile}_NO_PACK")
+
 	MATH(EXPR _line_num ${_line_num}+1)
 
 	COMMAND_OUTPUT_TO_VARIABLE(CHANGELOG_ITEMS tail -n +${_line_num} ${releaseFile})
+
 	INCLUDE(DateTimeFormat)
 	FILE(READ "ChangeLog.prev" CHANGELOG_PREV)
 	CONFIGURE_FILE(ChangeLog.in ChangeLog)
