@@ -1,5 +1,7 @@
-PRJ_VER=1.3.6.20100818
+PRJ_VER=1.3.6.20100820
 SUMMARY=Resolves: #608991
+UPDATE_TYPE=bugfix
+REDHAT_BUGZILLA=
 [Changes]
 - Resolves: #608991
 - Update CMake macros to use new GIT infrastructure
